# dev-support-aria

./: .gitignore  CLAUDE.md  MARKETING_STRATEGY.md  PROJECT_OVERVIEW.md  product-analysis.md  prompt-feature-brainstorm.md
aiba-camera-extension/: inject.js  manifest.json  popup.html
aiba-extension/: app-bridge.js  background.js  manifest.json  meet-captions.js  meet-rtc-hook.js  offscreen.html  offscreen.js  popup.html  popup.js  teams-captions.js  teams-rtc-hook.js  tool-camera.js  tool-noter.js  toolbar.css  toolbar.js  zoom-captions.js  zoom-hook.js
butler-admin-app/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
butler-admin-app/src/: App.tsx  vite-env.d.ts
butler-assistant-app/: .env.example  .gitignore  README.md  capacitor.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
butler-assistant-app/android/: capacitor.settings.gradle
butler-assistant-app/public/: sw.js
butler-assistant-app/src/: App.css  App.tsx  index.css  main.tsx
butler-assistant-app/src-tauri/: Cargo.toml  tauri.conf.json
butler-assistant-app/src-tauri/capabilities/: default.json
butler-assistant-app/src-tauri/icons/: icon.icns
butler-assistant-app/src-tauri/src/: lib.rs
docs/: DOCS_DATA_AND_FLOW.md  DOCS_FUNCTIONAL_SPEC.md  DOCS_SYSTEM_OVERVIEW.md  MCP_CLP_SPEC.md  aws-architecture.drawio  biz-dev-analysis.md  hybrid-session-design.md  mcp-integration-design.md  optimization-action-plan.md
infra/: cdk.json  package-lock.json  package.json  tsconfig.json
(+371 files in other folders)
